shill: add DHCPProperty.Hostname and DHCPProperty.VendorClass property

https://android-review.googlesource.com/c/platform/system/connectivity/shill/+/181040
introduced two Manager properties, "DHCPProperty.Hostname" and
"DHCPProperty.VendorClass", and removed the "HostName" property.

BUG=chromium:852035
TEST=Remote trybot runs.

Change-Id: I8ae6c444698cbb6c42472158ca931ecaf19299fe
Reviewed-on: https://chromium-review.googlesource.com/1101913
Commit-Ready: Ben Chan <benchan@chromium.org>
Tested-by: Ben Chan <benchan@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Dan Erat <derat@chromium.org>